# jamun

./: .gitignore  KADL-JAMUN-trimmed-480p.mov  README.md  pyproject.toml
analysis/: README.md  analysis_sweep.py  analysis_sweep.sh  analysis_sweep_mc.py  boltz_analysis_sweep.py  boltz_analysis_sweep.sh  load_trajectory.py  make_all_plots.py  make_all_plots.sh  make_plots.ipynb  make_plots.py  makeplots-new.ipynb  makeplots.ipynb  mdgen_analysis_sweep.py  mdgen_analysis_sweep.sh  pyemma_helper.py  run_all_analysis.sh  run_analysis.py  run_analysis_sdf.py  sample_runs.csv  tbg_analysis_sweep.py  tbg_analysis_sweep.sh  train_runs.csv  utils_sdf.py
analysis/sampling_times/: JAMUN.csv  JAMUNReference_2AA.csv
configs/experiment/: sample_capped_2AA.yaml  sample_chignolin.yaml  sample_custom.yaml  sample_macrocycle.yaml  sample_macrocycle_4AA_5AA.yaml  sample_macrocycle_4AA_longest_run.yaml  sample_macrocycle_longer.yaml  sample_mdgen.yaml  sample_uncapped_2AA_diffusion.yaml  sample_uncapped_4AA.yaml  sample_uncapped_5AA.yaml  train_capped_2AA.yaml  train_chignolin.yaml  train_idrome.yaml  train_idrome_cg.yaml  train_idrome_cg_subset.yaml  train_macrocycles.yaml  train_macrocycles_4AA_5AA.yaml  train_macrocycles_4mers_long.yaml  train_macrocycles_test.yaml  train_mdgen.yaml  train_test.yaml  train_test_energy.yaml  train_test_orb.yaml  train_trpcage.yaml  train_uncapped_2AA_diffusion.yaml  train_uncapped_2AA_energy.yaml  train_uncapped_2AA_orb.yaml
profiling/: profile.sh  standalone_training.py
scripts/: chunk_trajectory.py  prepare_macrocycles.py  prepare_macrocycles.sh  prepare_pdb.py  process_MDGen_data.py  process_fast_folding_proteins.py
scripts/BioEmu/: sidechain_reconstruction.sh
scripts/IDRome/: README.md  combine_frames.py  combine_frames.sh  copy_trajectories.py  copy_trajectories.sh  extract_frames.py  relax_structures.py  relax_structures.sh  relax_structures_batched.sh  to_all_atom.py  to_all_atom.sh  to_all_atom_batched.sh
scripts/MD/: openmm_utils.py  restart.py  run_simulation.py
scripts/generate_data/: openmm_utils.py
scripts/slurm/: generate_sample_sbatch.py  generate_train_sbatch.py  model_sweep.sh  model_sweep_orb.sh  sample_capped_2AA.sh  sample_chignolin.sh  sample_macrocycles_4AA_5AA.sh  sample_macrocycles_longer.sh  sample_uncapped_4AA_0.2A.sh  sample_uncapped_4AA_0.4A.sh  sample_uncapped_4AA_0.8A.sh  train_capped_2AA.sh  train_chignolin.sh  train_idrome.sh  train_idrome_cg.sh  train_macrocycles.sh  train_mdgen.sh  (+11 more)
(+94 files in other folders)
