[project]
name = "jamun"
description = "JAMUN: Transferable Molecular Conformational Ensemble Generation with Walk-Jump Sampling"
authors = [{name = "Prescient Design"}]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "ase>=3.23.0",
    "e3nn>=0.5.6",
    "e3tools>=0.1.1",
    "einops>=0.8.0",
    "hydra-core>=1.3.2",
    "lightning>=2.4.0",
    "lovelyplots>=1.0.2",
    "matplotlib>=3.10.0",
    "mdtraj>=1.10.2",
    "ninja>=1.11.1.3",
    "numpy>=2",
    "omegaconf>=2.3.0",
    "pandas>=2.1.0",
    "plotly>=5.24.1",
    "posebusters>=0.3.1",
    "pot>=0.9.5",
    "py3dmol>=2.4.2",
    "python-dotenv>=1.0.1",
    "rdkit>=2024.3.6",
    "requests>=2.32.3",
    "s3fs[boto3]>=2024.10.0",
    "scipy>=1.13.1",
    "statsmodels>=0.14.0",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "universal-pathlib>=0.2.6",
    "wandb>=0.19.1",
]

[project.scripts]
jamun_train = "jamun.cmdline.train:main"
jamun_sample = "jamun.cmdline.sample:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.34.0",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"

[tool.ruff]
line-length = 120
exclude = [
  "analysis"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # requires python >= 3.10
    "B007",  # unused-loop-control-variable
    "E741",  # ambiguous-variable-name
    "E402",  # Module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # MODULE IMPORTED BUT UNUSED
]

[tool.uv]
no-build-package = ["mdtraj"]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
